--- a/index.html
+++ b/index.html
@@ -121,10 +121,9 @@
 		<div class="col-lg-6">
 		  <h2>往年来不凡学习游泳的学员都满载而归，通过学习游泳激发学员对运动的热爱。</h2>
 		  <p class="text-muted"s>点击观看往届学员风采</p>
-		  <button ><video width="1000"  controls="controls>" 
-					<source src="img/vlog2.mp4" type="video/mp4">
-					</source> 
-				</video></button>
+		   <button class="btn btn-primary js-modal-btn" data-video-id="B6uuIHpFkuo" >
+		   	<i class="fas fa-play-circle mr-2"></i><a href="video1.html">播放视频</a></button>
+
 		</div>
 	  </div>
 	  <div class="row align-items-center">
@@ -148,7 +147,7 @@
 					<use xlink:href="#document-saved-1"> </use>
 				  </svg>
 				  <h3 class="h5 font-weight-normal h4 my-3">培训班</h3>
-				  <p class="text-small mb-0 text-muted">Lorem ipsum dolor amet consectetur adipisicing.</p>
+				  <p class="text-small mb-0 text-muted">580/人</p>
 				</div>
 			  </div>
 			</div>
@@ -160,7 +159,7 @@
 					<use xlink:href="#map-marker-1"> </use>
 				  </svg>
 				  <h3 class="h5 font-weight-normal h4 my-3">一对一私教 </h3>
-				  <p class="text-small mb-0 text-muted">Lorem ipsum dolor amet consectetur adipisicing.</p>
+				  <p class="text-small mb-0 text-muted">1280/人</p>
 				</div>
 			  </div>
 			</div>
@@ -172,7 +171,7 @@
 					<use xlink:href="#arrow-target-1"> </use>
 				  </svg>
 				  <h3 class="h5 font-weight-normal h4 my-3">一对二私教</h3>
-				  <p class="text-small mb-0 text-muted">Lorem ipsum dolor amet consectetur adipisicing.</p>
+				  <p class="text-small mb-0 text-muted">1000/两人</p>
 				</div>
 			  </div>
 			</div>
@@ -236,56 +235,7 @@
 	</div>
   </div>
 </section><a class="scropll-top-btn" id="scrollTop" href="#"><i class="fas fa-long-arrow-alt-up"></i></a>
-<footer class="with-pattern-1 position-relative">
-  <div class="container section-padding-y">
-	<div class="row">
-	  <div class="col-lg-3 mb-4 mb-lg-0"><img class="mb-4" src="img/logo.svg" alt="" width="110">
-		<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-	  </div>
-	  <div class="col-lg-2 mb-4 mb-lg-0">
-		<h2 class="h5 mb-4">Quick Links</h2>
-		<div class="d-flex">
-		  <ul class="list-unstyled d-inline-block mr-4 mb-0">
-			<li class="mb-2"><a class="footer-link" href="#">History </a></li>
-			<li class="mb-2"><a class="footer-link" href="#">About us</a></li>
-			<li class="mb-2"><a class="footer-link" href="#">Contact us</a></li>
-			<li class="mb-2"><a class="footer-link" href="#">Services</a></li>
-		  </ul>
-		</div>
-	  </div>
-	  <div class="col-lg-2 mb-4 mb-lg-0">
-		<h2 class="h5 mb-4">Services</h2>
-		<div class="d-flex">
-		  <ul class="list-unstyled mr-4 mb-0">
-			<li class="mb-2"><a class="footer-link" href="#">History </a></li>
-			<li class="mb-2"><a class="footer-link" href="#">About us</a></li>
-			<li class="mb-2"><a class="footer-link" href="#">Contact us</a></li>
-			<li class="mb-2"><a class="footer-link" href="#">Services</a></li>
-		  </ul>
-		</div>
-	  </div>
-	  <div class="col-lg-5">
-		<h2 class="h5 mb-4">Contact Info</h2>
-		<ul class="list-unstyled mr-4 mb-3">
-		  <li class="mb-2 text-muted">728  Ocello Street, San Diego, California. </li>
-		  <li class="mb-2"><a class="footer-link" href="tel:619-851-4132">619-851-4132</a></li>
-		  <li class="mb-2"><a class="footer-link" href="mailto:Nova@example.com">Nova@example.com</a></li>
-		</ul>
-		<ul class="list-inline mb-0">
-		  <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-facebook-f"></i></a></li>
-		  <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
-		  <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-google-plus"></i></a></li>
-		  <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-instagram"></i></a></li>
-		</ul>
-	  </div>
-	</div>
-  </div>
-  <div class="copyrights">       
-	<div class="container text-center py-4">
-	  <p class="mb-0 text-muted text-sm">Copyright &copy; 2020.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
-	</div>
-  </div>
-</footer>
+
 <!-- JavaScript files-->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
