--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
 			<li class="text-muted mb-2">教练进行专业训练</li>
 			<li class="text-muted mb-2">课下可以免费训练</li>
 		  </ul>
-		  <button class="btn btn-primary js-modal-btn" data-video-id="B6uuIHpFkuo"><i class="fas fa-play-circle mr-2"></i>播放视频</button>
+		  <button class="btn btn-primary js-modal-btn" data-video-id="B6uuIHpFkuo"><i class="fas fa-play-circle mr-2">
+		  	</i><a href="video2.html">播放视频</a></button>
 		</div>
 		<div class="col-lg-6">
 		  <div class="row">
