--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@
 		<div class="col-lg-6">
 		  <h2>往年来不凡学习游泳的学员都满载而归，通过学习游泳激发学员对运动的热爱。</h2>
 		  <p class="text-muted"s>点击观看往届学员风采</p>
-		   <button class="btn btn-primary js-modal-btn" data-video-id="B6uuIHpFkuo" >
-		   	<i class="fas fa-play-circle mr-2"></i><a href="video1.html">播放视频</a></button>
+		 <a href="video1.html"> <button type="button" class="btn btn-primary" ><i class="fas fa-play-circle mr-2"></i>播放视频</button></a>
+		 
+		  
 
 		</div>
 	  </div>
@@ -135,8 +136,8 @@
 			<li class="text-muted mb-2">教练进行专业训练</li>
 			<li class="text-muted mb-2">课下可以免费训练</li>
 		  </ul>
-		  <button class="btn btn-primary js-modal-btn" data-video-id="B6uuIHpFkuo"><i class="fas fa-play-circle mr-2">
-		  	</i><a href="video2.html">播放视频</a></button>
+		 <a href="video2.html"> <button type="button" class="btn btn-primary" ><i class="fas fa-play-circle mr-2"></i>播放视频</button></a>
+
 		</div>
 		<div class="col-lg-6">
 		  <div class="row">
