--- a/video2.html
+++ b/video2.html
@@ -45,58 +45,16 @@
 	</div>
   </nav>
 </header>
-<section class="p-0" id="testimonials" style="background: url(img/testimonials-bg.png) no-repeat; background-size: 40% 100%; background-position: left center">
-  <div class="container text-center">
-	<p class="h6 text-uppercase text-primary">Testimonials</p>
-	<h2 class="mb-5">联系我们</h2>
-	<div class="row">
-	  <div class="col-lg-8 mx-auto">
-		<div class="owl-carousel owl-theme testimonials-slider">
-		  <div class="mx-3 mx-lg-5 my-5 pt-3">
-			<div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
-			  <div class="card-body index-forward pt-5 rounded-lg">
-				  <video width="1000" controls="controls>" 
+<!-- Hero Section-->
+
+  <section class="with-pattern-1" id="services">
+	<div class="container">
+	  <div class="row align-items-center mb-5">
+		<div class="col-lg-6 mb-5 mb-lg-0"><video width="1000" controls="controls>" 
 					<source src="img/vlog2.mp4" type="video/mp4">
 					</source> 
-				</video>
-		  <button class="btn btn-primary js-modal-btn" ><i class="fas fa-play-circle mr-2" ></i><a href="index.html">反回</a></button>
-			  </div>
-			</div>
-		  </div>
-		  <div class="mx-3 mx-lg-5 my-5 pt-3">
-			<div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
-			  <div class="card-body index-forward pt-5 rounded-lg">
-				<div class="testimonial-img"><img class="rounded-circle" src="img/avatar-2.png" alt=""/></div>
-				<p class="lead text-muted mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-				<h5 class="font-weight-bold mb-0">Frank Smith</h5>
-				<p class="text-primary mb-0 text-small">Tech Developer</p>
-			  </div>
-			</div>
-		  </div>
-		  <div class="mx-3 mx-lg-5 my-5 pt-3">
-			<div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
-			  <div class="card-body index-forward pt-5 rounded-lg">
-				<div class="testimonial-img"><img class="rounded-circle" src="img/avatar-1.jpg" alt=""/></div>
-				<p class="lead text-muted mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-				<h5 class="font-weight-bold mb-0">Sarah Hudson</h5>
-				<p class="text-primary mb-0 text-small">Tech Developer</p>
-			  </div>
-			</div>
-		  </div>
-		  <div class="mx-3 mx-lg-5 my-5 pt-3">
-			<div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
-			  <div class="card-body index-forward pt-5 rounded-lg">
-				<div class="testimonial-img"><img class="rounded-circle" src="img/avatar-2.png" alt=""/></div>
-				<p class="lead text-muted mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-				<h5 class="font-weight-bold mb-0">Frank Smith</h5>
-				<p class="text-primary mb-0 text-small">Tech Developer</p>
-			  </div>
-			</div>
-		  </div>
-		</div>
-	  </div>
-	</div>
-  </div>
+				</video></div>
+		
 </section><a class="scropll-top-btn" id="scrollTop" href="#"><i class="fas fa-long-arrow-alt-up"></i></a>
 
 <!-- JavaScript files-->
