--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav ml-auto">
 		  <li class="nav-item"><a class="nav-link link-scroll active" href="#hero">不凡 <span class="sr-only">(current)</span></a></li>
-		  <li class="nav-item"><a class="nav-link link-scroll" href="#about">About</a></li>
-		  <li class="nav-item"><a class="nav-link link-scroll" href="#services">Services</a></li>
-		  <li class="nav-item"><a class="nav-link link-scroll" href="#testimonials">Testimonials</a></li>
+		  <li class="nav-item"><a class="nav-link link-scroll" href="#about">我们承诺</a></li>
+		  <li class="nav-item"><a class="nav-link link-scroll" href="#services">往期学员视频</a></li>
+		  <li class="nav-item"><a class="nav-link link-scroll" href="#testimonials">联系我们</a></li>
 		</ul>
 	  </div>
 	</div>
