--- a/video2.html
+++ b/video2.html
@@ -50,7 +50,7 @@
   <section class="with-pattern-1" id="services">
 	<div class="container">
 	  <div class="row align-items-center mb-5">
-		<div class="col-lg-6 mb-5 mb-lg-0"><video width="1000" controls="controls>" 
+		<div class="col-lg-6 mb-5 mb-lg-0"><video  controls="controls>" 
 					<source src="img/vlog2.mp4" type="video/mp4">
 					</source> 
 				</video></div>
