--- a/video2.html
+++ b/video2.html
@@ -54,7 +54,8 @@
 					<source src="img/vlog2.mp4" type="video/mp4">
 					</source> 
 				</video></div>
-		
+ <a href="index.html"> <button type="button" class="btn btn-primary" ><i class="fas fa-play-circle mr-2"></i>返回</button></a>
+	
 </section><a class="scropll-top-btn" id="scrollTop" href="#"><i class="fas fa-long-arrow-alt-up"></i></a>
 
 <!-- JavaScript files-->
