--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- navbar-->
 <header class="header">
   <nav class="navbar navbar-expand-lg fixed-top">
-	<div class="container"><a class="navbar-brand" href="#"><img src="img/logo.svg" alt="" width="110"></a>
+	<div class="container"><a class="navbar-brand" href="#"></a>
 	  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav ml-auto">
@@ -53,8 +53,8 @@
 		<h1 class="font-weight-bold">不凡健身房</h1>
 		<p class="my-4 text-muted">暑期游泳培训欢迎您的到来</p>
 		<ul class="list-inline mb-0">
-		  <li class="list-inline-item mb-2 mb-lg-0"><a class="btn btn-primary btn-lg px-4" href="#"> <i class="fab fa-google-play mr-3"></i>Google Play</a></li>
-		  <li class="list-inline-item"><a class="btn btn-primary btn-lg px-4" href="#"> <i class="fab fa-app-store mr-3"></i>App Store</a></li>
+		  <li class="list-inline-item mb-2 mb-lg-0"><a class="btn btn-primary btn-lg px-4" href="#"> <i class="fab fa-google-play mr-3"></i>侯教练游泳培训</a></li>
+		  <li class="list-inline-item"><a class="btn btn-primary btn-lg px-4" href="#"> <i class="fab fa-app-store mr-3"></i>盛夏来袭</a></li>
 		</ul>
 	  </div>
 	  <div class="col-lg-6 ml-auto">
@@ -83,7 +83,7 @@
 				<use xlink:href="#document-saved-1"> </use>
 			  </svg>
 			  <h3 class="font-weight-normal h4 my-4">室内豪华泳池</h3>
-			  <p class="text-small mb-0">环境优美，水质优良，每天都会进行水质检测，为尊贵的您提供最好的游泳环境。</p>
+			  <p class="text-small mb-0">环境优美，水质优良，为尊贵的您提供最好的游泳环境。</p>
 			</div>
 		  </div>
 		</div>
@@ -119,7 +119,7 @@
 	  <div class="row align-items-center mb-5">
 		<div class="col-lg-6 mb-5 mb-lg-0"><img class="img-fluid w-100 px-lg-5" src="img/objects.svg" alt=""></div>
 		<div class="col-lg-6">
-		  <h2>往年来不凡学习游泳的学员都满载而归，通过学习游泳激发学员对运动的热爱。</h2>
+		  <h2>快乐学习</h2>
 		  <p class="text-muted"s>点击观看往届学员风采</p>
 		 <a href="video1.html"> <button type="button" class="btn btn-primary" ><i class="fas fa-play-circle mr-2"></i>播放视频</button></a>
 		 
@@ -130,12 +130,14 @@
 	  <div class="row align-items-center">
 		<div class="col-lg-6 mb-5 mb-lg-0">
 		  <h2>学习过程</h2>
+		
 		  <p class="text-muted"></p>
 		  <ul class="list-check">
-			<li class="text-muted mb-2">课前讲解</li>
-			<li class="text-muted mb-2">教练进行专业训练</li>
-			<li class="text-muted mb-2">课下可以免费训练</li>
+			<li class="text-muted mb-2">蛙泳</li>
+			<li class="text-muted mb-2">自由泳</li>
+			<li class="text-muted mb-2">救生常识</li>
 		  </ul>
+		    <p class="text-muted"s>点击观看往届学员风采</p>
 		 <a href="video2.html"> <button type="button" class="btn btn-primary" ><i class="fas fa-play-circle mr-2"></i>播放视频</button></a>
 
 		</div>
@@ -186,7 +188,9 @@
 </section>
 <section class="p-0" id="testimonials" style="background: url(img/testimonials-bg.png) no-repeat; background-size: 40% 100%; background-position: left center">
   <div class="container text-center">
-	<p class="h6 text-uppercase text-primary">Testimonials</p>
+	<p class="h6 text-uppercase text-primary">Contact us
+
+</p>
 	<h2 class="mb-5">联系我们</h2>
 	<div class="row">
 	  <div class="col-lg-8 mx-auto">
@@ -195,43 +199,16 @@
 			<div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
 			  <div class="card-body index-forward pt-5 rounded-lg">
 				<div class="testimonial-img"><img class="rounded-circle" src="img/avatar-1.jpg" alt=""/></div>
-					<h5 class="font-weight-bold mb-0">手机号：17630234647</h5>
-				<h5 class="font-weight-bold mb-0">微信：17630234647</h5>
+				<img src="img/111.jpg" alt="">
 				</br>
-		  <button class="btn btn-primary js-modal-btn" ><i class="fas fa-play-circle mr-2" ></i>联系我</button>
+					
+				</br>
+		 <a href="https://wj.qq.com/s2/6539741/1c81/"> <button type="button" class="btn btn-primary" >留言</button></a>
 			  </div>
 			</div>
 		  </div>
-		  <div class="mx-3 mx-lg-5 my-5 pt-3">
-			<div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
-			  <div class="card-body index-forward pt-5 rounded-lg">
-				<div class="testimonial-img"><img class="rounded-circle" src="img/avatar-2.png" alt=""/></div>
-				<p class="lead text-muted mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-				<h5 class="font-weight-bold mb-0">Frank Smith</h5>
-				<p class="text-primary mb-0 text-small">Tech Developer</p>
-			  </div>
-			</div>
-		  </div>
-		  <div class="mx-3 mx-lg-5 my-5 pt-3">
-			<div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
-			  <div class="card-body index-forward pt-5 rounded-lg">
-				<div class="testimonial-img"><img class="rounded-circle" src="img/avatar-1.jpg" alt=""/></div>
-				<p class="lead text-muted mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-				<h5 class="font-weight-bold mb-0">Sarah Hudson</h5>
-				<p class="text-primary mb-0 text-small">Tech Developer</p>
-			  </div>
-			</div>
-		  </div>
-		  <div class="mx-3 mx-lg-5 my-5 pt-3">
-			<div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
-			  <div class="card-body index-forward pt-5 rounded-lg">
-				<div class="testimonial-img"><img class="rounded-circle" src="img/avatar-2.png" alt=""/></div>
-				<p class="lead text-muted mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-				<h5 class="font-weight-bold mb-0">Frank Smith</h5>
-				<p class="text-primary mb-0 text-small">Tech Developer</p>
-			  </div>
-			</div>
-		  </div>
+		  </br>
+		  
 		</div>
 	  </div>
 	</div>
