--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<p class="my-4 text-muted">暑期游泳培训欢迎您的到来</p>
 		<ul class="list-inline mb-0">
 		  <li class="list-inline-item mb-2 mb-lg-0"><a class="btn btn-primary btn-lg px-4" href="#"> <i class="fab fa-google-play mr-3"></i>侯教练游泳培训</a></li>
-		  <li class="list-inline-item"><a class="btn btn-primary btn-lg px-4" href="#"> <i class="fab fa-app-store mr-3"></i>盛夏来袭</a></li>
+		  <li class="list-inline-item"><a class="btn btn-primary btn-lg px-4" href="#"> <i class="fab fa-google-play mr-3"></i>盛夏来袭</a></li>
 		</ul>
 	  </div>
 	  <div class="col-lg-6 ml-auto">
